--- a/poem.rmd
+++ b/poem.rmd
@@ -19,6 +19,18 @@ you, if you change any of this the git program will notice it and compromise you
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
+I went to turn the grass once after one.  
+Who mowed it in the dew before the sun.    
+
+The dew was gone that made his blade so keen.    
+Before I came to view the levelled scene.    
+
+I looked for him behind an isle of trees;       
+I listened for his whetstone on the breeze.       
+
+
+
+
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
