commit verse 4 knit

--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,39 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem you created using chatGPT of 20 to 30 lines,here!-->
+
+
+In gardens fair, where blossoms bloom,      
+There dances free a splendid plume,       
+A creature delicate and bright,        
+A symbol of pure joy and light.        
+
+With wings adorned in vivid hues,      
+A ballet in the air they choose,        
+A dance of grace, so light and free,        
+A sight that fills our hearts with glee.         
+
+From caterpillar to the sky,        
+A transformation, none can deny,         
+Metamorphosis, a wondrous thing,         
+A miracle that life can bring.          
+
+Their flight, a whisper through the air,       
+A symphony of colors rare,      
+A gentle flutter, soft and sweet,        
+Their beauty, a divine retreat.        
+
+In sun-kissed meadows, they alight,       
+With petals soft, they find delight,         
+They sip the nectar from the flowers,          
+A love that blooms through fleeting hours.          
+
+Their journey brief, but full of zest,            
+A symbol of life's transient quest,              
+To remind us all, each passing day,                
+To cherish moments, come what may.             
+
+So when you see a butterfly,              
+In gardens bright or skies up high,           
+Pause for a moment, and you'll see,              
+Life's precious dance and its decree.              
